--- a/src/UI/PlcMonitor.UI.csproj
+++ b/src/UI/PlcMonitor.UI.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
