--- a/src/UI/PlcMonitor.UI.csproj
+++ b/src/UI/PlcMonitor.UI.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+    <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
+    <PackageReference Include="Sally7" Version="0.8.0" />
   </ItemGroup>
 </Project>
