Add IPlcConnection and brand specific stubs

--- a/src/UI/PlcMonitor.UI.csproj
+++ b/src/UI/PlcMonitor.UI.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+    <PackageReference Include="NModbus" Version="3.0.62" />
     <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
     <PackageReference Include="Sally7" Version="0.8.0" />
   </ItemGroup>
